[tool.poetry]
authors = ["Saito Tsutomu <tsutomu7@hotmail.co.jp>"]
classifiers = [
  "Development Status :: 1 - Planning",
  "License :: OSI Approved :: Python Software Foundation License",
  "Programming Language :: Python",
  "Topic :: Software Development",
  "Topic :: Scientific/Engineering",
]
description = "Simple geocoding"
homepage = "https://github.com/SaitoTsutomu/simple-geocoding"
license = "PSFL"
name = "simple-geocoding"
readme = "README.md"
version = "0.0.1"

[tool.poetry.scripts]
simple-geocoding = "simple_geocoding:main"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.1"
scipy = "^1.5.2"
fire = "^0.3.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.3"
black = "^19.10b0"
isort = "^5.4.2"
mypy = "^0.782"

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
