[tool.poetry]
authors = ["Saito Tsutomu <tsutomu7@hotmail.co.jp>"]
classifiers = [
  "Development Status :: 1 - Planning",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Topic :: Software Development",
  "Topic :: Scientific/Engineering",
]
description = "Simple geocoding"
homepage = "https://github.com/SaitoTsutomu/simple-geocoding"
license = "MIT"
name = "simple-geocoding"
readme = "README.md"
version = "0.0.2"

[tool.poetry.scripts]
simple-geocoding = "simple_geocoding:main"

[tool.poetry.dependencies]
fire = "^0.3.1"
pandas = "^1.1.1"
python = "^3.8"
scipy = "^1.5.2"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.8.3"
isort = "^5.4.2"
mypy = "^0.782"
pytest = "^5.2"

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
